# mcp-llm-text-generator

./: .gitignore  README.md  app.py  dashboard.py  main.py  pyproject.toml  requirements.txt
src/: context.py  evaluation.py  excel_runner.py  llm.py  mcp_app.py  resource.py  resources.py  schemas.py  server.py  storage.py  tools.py  utils.py
src/data/references/: GTN.txt  REACH.txt  VIRTOSHA.txt
src/outputs/Autonomous Driving Challenge/: output.json
src/outputs/FORAN/: output.json
src/outputs/GTN/: evaluation.json  output.json
src/outputs/REACH/: evaluation.json  output.json
src/outputs/VIRTOSHA/: evaluation.json  output.json
src/tests/: test.py
static/css/: styles.css
templates/: index.html  project.html
