[project]
name = "project-text-generator"
version = "0.1.0"
description = "MCP LLM text generator for research projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26.0",
    "fastmcp>=2.14.4",
    "openai>=2.15.0",
    "pandas>=3.0.0",
    "openpyxl>=3.1.5",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "deepeval>=3.8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-repeat>=0.9.4",
    "pytest-rerunfailures>=16.1",
    "pytest-xdist>=3.8.0",
]